welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:5: error: ')' expected but 'else' found.
	else if ((c-a)>=10) {return true}
        ^